--- a/config/configuration.yml
+++ b/config/configuration.yml
@@ -145,6 +145,7 @@ production:
     delivery_method: :smtp
     smtp_settings:
       address: smtp.sendgrid.net
+      domain: heroku.com
       port: 25
       authentication: :plain
       user_name: ENV['SENDGRID_USERNAME'],
