--- a/config/configuration.yml
+++ b/config/configuration.yml
@@ -144,11 +144,11 @@ production:
   email_delivery:
     delivery_method: :smtp
     smtp_settings:
-      address: smtp.sendgrid.net
+      address: "smtp.sendgrid.net"
       port: 25
       authentication: :plain
-      user_name: ENV['SENDGRID_USERNAME'],
-      password: ENV['SENDGRID_PASSWORD'],
+      user_name: ENV['SENDGRID_USERNAME']
+      password: ENV['SENDGRID_PASSWORD']
       domain: ENV['SENDGRID_DOMAIN']
 
 # specific configuration options for development environment
