--- a/config/email.yml
+++ b/config/email.yml
@@ -1,9 +1,9 @@
 production:
   delivery_method: :smtp
   smtp_settings:
-    address: smtp.sendgrid.net
+    address: "smtp.sendgrid.net"
     port: 25
     authentication: :plain
-    user_name: ENV['SENDGRID_USERNAME'],
-    password: ENV['SENDGRID_PASSWORD'],
+    user_name: ENV['SENDGRID_USERNAME']
+    password: ENV['SENDGRID_PASSWORD']
     domain: ENV['SENDGRID_DOMAIN']
