--- a/config/configuration.yml
+++ b/config/configuration.yml
@@ -147,9 +147,9 @@ production:
       address: "smtp.sendgrid.net"
       port: 25
       authentication: :plain
-      user_name: "<%=ENV["SENDGRID_USERNAME"]%>"
-      password: "<%=ENV["SENDGRID_PASSWORD"]%>"
-      domain: "<%=ENV["SENDGRID_DOMAIN"]%>"
+      user_name: <%=ENV["SENDGRID_USERNAME"]%>
+      password: <%=ENV["SENDGRID_PASSWORD"]%>
+      domain: <%=ENV["SENDGRID_DOMAIN"]%>
 
 # specific configuration options for development environment
 # that overrides the default ones
